--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@drawable/loki"
         android:supportsRtl="true"
         android:theme="@style/MyTheme"
-        tools:targetApi="31">
+        tools:targetApi="32">
+        <activity
+            android:name=".DetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
